@@ -1,6 +1,6 @@
 package com.pakhomov.solidtest.controller.rest;
 
-import com.pakhomov.solidtest.model.Product;
+import com.pakhomov.solidtest.model.entity.Product;
 import com.pakhomov.solidtest.service.ProductService;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
@@ -11,7 +11,7 @@ import java.util.List;
 @RequestMapping("/api/products")
 public class ProductRestController {
 
-    public final static int COUNT_ON_PAGE = 10;
+    private final static int COUNT_ON_PAGE = 10;
 
     private final ProductService productService;
 
@@ -20,7 +20,7 @@ public class ProductRestController {
     }
 
     @GetMapping
-    public ResponseEntity<List<Product>> getListProduct(
+    private ResponseEntity<List<Product>> getListProduct(
             @RequestParam(name = "page", required = false) Integer page) {
         if (page == null) {
             return ResponseEntity.ok(productService.getProductsOnPage(1, COUNT_ON_PAGE));
@@ -29,24 +29,24 @@ public class ProductRestController {
     }
 
     @PostMapping("/edit")
-    public ResponseEntity editProduct(@RequestBody Product editProduct) {
+    private ResponseEntity editProduct(@RequestBody Product editProduct) {
         productService.updateProduct(editProduct);
         return ResponseEntity.ok().build();
     }
 
     @PostMapping("/add")
-    public ResponseEntity saveNewProduct(@RequestBody Product newProduct) {
+    private ResponseEntity saveNewProduct(@RequestBody Product newProduct) {
         productService.saveProduct(newProduct);
         return ResponseEntity.ok().build();
     }
 
     @GetMapping("/pagination")
-    public ResponseEntity<Long> getPagesNumber() {
+    private ResponseEntity<Long> getPagesNumber() {
         Long countOfProducts = productService.getCountOfProducts();
         if (countOfProducts == 0) {
             return ResponseEntity.noContent().build();
         } else {
-            return ResponseEntity.ok(new Double(Math.ceil(countOfProducts.doubleValue() / COUNT_ON_PAGE)).longValue());
+            return ResponseEntity.ok(Double.valueOf(Math.ceil(countOfProducts.doubleValue() / COUNT_ON_PAGE)).longValue());
         }
     }
 }
